# armcrunch

./: .gitignore  openapi.yaml  rebuild.sh
.github/workflows/: gwnum-bench.yml
app/: .gitignore  Cargo.toml  build.rs  result.txt  test.sh
app/bench/: Makefile.gwnum  README.md  download_gwnum.sh  gwnum_bench.c
app/benches/: square_mod.rs
app/src/: arithmetic.rs  cli.rs  dwt.rs  fermat.rs  fft_engine.rs  lib.rs  main.rs  negacyclic.rs  neon_fft.rs  ntt.rs
app/tasks/dwt-squarer/: README.md  task-01-round-trip.md  task-02-k-gt-1-repr.md  task-03-integer-b.md  task-04-carry-normalize.md  task-05-integration.md
app/tasks/negacyclic-ntt/: README.md  task-01-core-arithmetic.md  task-02-ntt-intt.md  task-03-twist-and-struct.md  task-04-fft-square.md  task-05-integration.md
app/tasks/neon-fft/: README.md  task-01-scaffold.md  task-02-radix2-neon.md  task-03-radix4-neon.md  task-04-twiddle-table.md  task-05-integration.md  task-06-mixed-radix.md
app/tests/: fermat.rs  ntt.rs
arm64/: README.md  benchmark.py  fftgen.py
gwnum_arm64/: README.md  arm64_asm_data.h  arm64_aux.c  arm64_cpuid.c  arm64_fft.c  arm64_gwinfo.c  arm64_norm.c  gwnum_arm64_integration.c  makemacarm64  patch_gwnum_for_arm64.sh
reference/prime95/: cert.c  comm95b.c  commonb.c  commonb.h  commonc.c  commonc.h  ecm truncated P-1.cpp  ecm.cpp  ecm.h  exponentiate.c  license.txt  pair.cpp  pair.h  pm1prob.c  pm1prob.h  proof_getdata.c  proof_hash.c  proof_upload.c  readme.txt  resume_gmp.c  undoc.txt
reference/prime95/gwnum/: compil64  compile  giants.c  gwnum.c  gwtables.c  make64  makebsd64  (+29 more)
(+8 files in other folders)
