[package]
name = "armcrunch"
version = "0.1.0"
edition = "2024"

[features]
fftw = ["dep:fftw"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rustfft = "6"
realfft = "3"
fftw = { version = "0.8", features = ["source"], optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "square_mod"
harness = false